[package]
name = "bloodhound"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.34.0"
serde = "1.0"
serde_yaml = "0.8"
log = "0.4.14"
env_logger = "0.9.0"
anyhow = "1.0.51"

[dependencies.reqwest]
version = "0.11.7"
features = ["blocking"]